# beta_binomial_plot

./: Dockerfile  README.md  beta_binomial.py
dev_environment/: environment.yml
src/: beta_binomial.py  pyproject.toml  requirements.txt
src/dev_environment/: anaconda_env_create.txt
